update braham et al

--- a/html/zoomcasts/braham-ohri-simpson.html
+++ b/html/zoomcasts/braham-ohri-simpson.html
@@ -88,12 +88,13 @@
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
 
+						<p>Adrian S. Wisnicki speaks with Kira Braham, Indu Ohri, and Bre Simpson, three scholars whose work he helped facilitate in developing a series of lesson plans on Mary Seacole, now published by <em>Undisciplining the Victorian Classroom</em>. The discussion begins by exploring how each of these scholars became involved in the lesson plan initiative, then turns to the content of the lesson plans themselves. As part of the discussion, the participants reflect on their development of the lesson plans through an iterative process, why they chose to focus on Mary Seacole in the first place, and the overall collegiality of the collaboration. The discussion closes with a review of some of the lessons they learned through the collaboration process, with the goal of sharing insights and observations that might be useful to other scholars looking to work together on the <em>Undisciplining the Victorian Classroom</em> project or in other contexts. The Zoomcast also includes a supplemental statement from Heidi Kaufman, a scholar who worked as part of the&nbsp; group on the Seacole lesson plans, but whose schedule prevented her from appearing in the Zoomcast.</p>
 					</summary>
 					
 					<section aria-labelledby="series">
 						<h3 id="series">Collaboration Series</h3>
 
-						<p>The cluster of Zoomcasts reflects on team-based pedagogy and scholarship as a strategy of undisciplining and empowerment. Although collaboration often lies at the core of digital humanities projects like <em>Undisciplining the Victorian Classroom</em>, for many Victorianist the single-scholar mode of endeavor and production remains the default. The Zoomcasts in this cluster, therefore, look to successful collaborations within Victorian Studies and beyond in order to uncover strategies and models by which Victorianists might extend the scope and impact of their work in the classroom and their research.</p>
+						<p>This cluster of Zoomcasts reflects upon team-based scholarship as a strategy of undisciplining and empowerment in both learning and teaching. Although collaboration often lies at the heart of digital humanities projects like <em>Undisciplining the Victorian Classroom</em>, the single-scholar mode of endeavor and production often remains the default for many Victorianists. The Zoomcasts in this cluster, therefore, highlight successful collaborations within Victorian Studies and beyond in order to uncover strategies and models that Victorianists and other scholars might employ to broaden the scope and impact of their work. By doing so, scholars have the potential to develop new and exciting modes of inquiry, while breaking with traditional Eurocentric ways of engaging with Victorian and other kinds of British and Anglophone literature.</p>
 					</section>
 
 					<section aria-labelledby="biography">
