update braham email

--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -60,7 +60,7 @@
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Kira Braham <a class="mail" href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
+							<p><strong>Developer:</strong> Kira Braham <a class="mail" href="mailto:kbraham@lsmsa.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
 
 							<p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 							
