--- a/html/zoomcasts.html
+++ b/html/zoomcasts.html
@@ -58,11 +58,11 @@
 					<p>These Zoomcasts serve as a mechanism for us to stage conversations around specific themes, think together about our classroom practices, and reflect on our processes of learning (and un-learning) as teachers. In conversation with guest speakers, we explore how we can grow together as a community of scholars and learn from one another – especially in moving beyond the boundaries of our field and training. Please also visit our <a href="https://www.youtube.com/channel/UCG54ttra0SBTh3PRvLXuTwA">YouTube</a> channel.</p>
 				</section>
 
-				<section aria-labelledby="collaboration-1">
+				<!-- <section aria-labelledby="collaboration-1">
 					<h2 id="collaboration-3">Collaboration #1</h2>
 					<div><a href="/html/zoomcasts/braham-ohri-simpson.html"><img loading="lazy" src="/img/zoomcasts/braham-ohri-simpson-930px.jpg" srcset="/img/zoomcasts/braham-ohri-simpson-1275px.jpg 1275w, /img/zoomcasts/braham-ohri-simpson-930px.jpg 930w, /img/zoomcasts/braham-ohri-simpson-816px.jpg 816w, /img/zoomcasts/braham-ohri-simpson-663px.jpg 663w, /img/zoomcasts/braham-ohri-simpson-532px.jpg 532w, /img/zoomcasts/braham-ohri-simpson-465px.jpg 465w, /img/zoomcasts/braham-ohri-simpson-408px.jpg 408w, /img/zoomcasts/braham-ohri-simpson-266px.jpg 266w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Head and shoulders images of Kira Braham, Indu Ohri, Bre Simpson" title="Kira Braham, Indu Ohri, Bre Simpson"/><span>Kira Braham, Indu Ohri, Bre Simpson</span></a></div>
 					<p>Kira Braham, Indu Ohri, Bre Simpson, and Adrian S. Wisnicki discuss the collaboration through which they developed lesson plans on Mary Seacole.</p>
-				</section>
+				</section> -->
 
 				<section aria-labelledby="positionality-3">
 					<h2 id="positionality-3">Positionality #3</h2>
