--- a/html/zoomcasts/walters.html
+++ b/html/zoomcasts/walters.html
@@ -102,7 +102,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Alisha Walters.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/walters.html</a>.</p>
+						<p>“Zoomcast with Alisha Walters.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/walters.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/walters.html</a>.</p>
 					</section>
 			</main>
 			
