--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -163,7 +163,7 @@
 
 						<p>Livingstone, David. <em><a href="http://livingstoneonline.org/uuid/node/c0bd18cf-692f-4843-b896-799cff98351b">Livingstone's Missionary Travels Manuscript</a></em>, directed by Justin D. Livingstone and Adrian S. Wisnicki, first ed, peer rev. and revision, <em>Livingstone Online</em>, directed by Adrian S. Wisnicki and Megan Ward, University of Nebraska-Lincoln, 2019-20.</p>
 
-						<p>Lockyer, Bridget, and Abigail Tazzymant. “<a href="https://www.jstor.org/stable/26384214">‘Victims of History’: Challenging Students’ Perceptions of Women in History</a>.” Teaching History, no. 165, 2016, pp. 8–15.
+						<p>Lockyer, Bridget, and Abigail Tazzymant. “<a href="https://www.jstor.org/stable/26384214">‘Victims of History’: Challenging Students’ Perceptions of Women in History</a>.” Teaching History, no. 165, 2016, pp. 8–15.</p>
 
 						<p>Longfellow, Henry Wadsworth. “Saint Filomena.” <em>The Complete Poetical Works of Henry Wadsworth Longfellow</em>, Riverside Press, 1883, pp. 173–74.</p>
 						
