--- a/0_dev/page-templates/0_syllabus-template.html
+++ b/0_dev/page-templates/0_syllabus-template.html
@@ -68,7 +68,7 @@
 
 							<p><strong>Cluster Title:</strong> </p><!-- Change -->
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
+							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
 
 							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
