--- a/0_dev/page-templates/0_syllabus-template.html
+++ b/0_dev/page-templates/0_syllabus-template.html
@@ -115,7 +115,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>, dev. “.” , peer rev.; , syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/.html" class="cite-link">https://undiscipliningvc.org/html/about/.html</a>.</p><!-- Change -->
+						<p>, dev. “.” , peer rev.; , syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
 			
