--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -122,7 +122,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Amy Kahrmann Huseby, dev. “.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_write_empire.html" class="cite-link">https://undiscipliningvc.org/html/about/women_write_empire.html</a>.</p>
+						<p>Amy Kahrmann Huseby, dev. “Nineteenth-Century Women Write the Empire.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_write_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/women_write_empire.html</a>.</p>
 					</section>
 			</main>
 			
