update women unite

--- a/html/syllabi/women_world_unite.html
+++ b/html/syllabi/women_world_unite.html
@@ -117,7 +117,7 @@
 
 						<p>(Left) Lewis, Edmonia. “‘<a href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s MarriageM</a>.’” Sculpture. 1871. <em>Wikimedia Commons</em>. Public domain.</p>
 						
-						<p>(Right) Rocher, Henry. “<a href="https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg">Edmonia LewisM</a>.” Albumen print. c.1870. <em>Wikimedia Commons</em>. Public domain.</p>
+						<p>(Right) Rocher, Henry. “<a href="https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg">Edmonia Lewis</a>.” Albumen print. c.1870. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
