update women world unite

--- a/html/syllabi/women_world_unite.html
+++ b/html/syllabi/women_world_unite.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="syllabus">Women of the World Unite? Nineteenth-Century Women Writers</h2>
-          	<img src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: X and Hiawatha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “‘Hiawatha’s Marriage.’” Sculpture. 1871. Wikimedia Commons. https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Public domain. (Right) Rocher, Henry. “Edmonia Lewis.” Albumen Print. c.1870. Wikimedia Commons. https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Public domain."/>
+          	<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: X and Hiawatha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “‘Hiawatha’s Marriage.’” Sculpture. 1871. Wikimedia Commons. https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Public domain. (Right) Rocher, Henry. “Edmonia Lewis.” Albumen Print. c.1870. Wikimedia Commons. https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -115,7 +115,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>(Left) Lewis, Edmonia. “‘<a href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s MarriageM</a>.’” Sculpture. 1871. <em>Wikimedia Commons</em>. Public domain.</p>
+						<p>(Left) Lewis, Edmonia. “‘<a href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s Marriage</a>.’” Sculpture. 1871. <em>Wikimedia Commons</em>. Public domain.</p>
 						
 						<p>(Right) Rocher, Henry. “<a href="https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg">Edmonia Lewis</a>.” Albumen print. c.1870. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
