--- a/html/syllabi/women_world_unite.html
+++ b/html/syllabi/women_world_unite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Women of the World Unite? Nineteenth-Century Women Writers | Undisciplining the Victorian Classroom</title>
+    <title>Women of the World Unite? | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Explores the emergence of first-wave feminism as it developed throughout a “transimperial” world."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="syllabus">Women of the World Unite? Nineteenth-Century Women Writers</h2>
+						<h2 class="bottom" id="syllabus">Women of the World Unite?</h2>
           	<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: X and Hiawatha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “Hiawatha’s Marriage.” 1871, https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Wikimedia Commons. Public domain. (Right) Rocher, Henry. Edmonia Lewis. c 1870, https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Wikimedia Commons. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
@@ -60,6 +60,8 @@
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
+							<p><strong>Full Syllabus Title:</strong> “Women of the World Unite? Nineteenth-Century Women Writers”</p>
+							
 							<p><strong>Developer:</strong> Jesse Cordes Selbin <a class="mail" href="mailto:jcordess@gettysburg.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Peer Reviewer:</strong> Ronjaunee Chatterjee</p>
@@ -68,7 +70,7 @@
 
 							<p><strong>Cluster Title:</strong> Gender and Empire</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/selbin_women_world_unite.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/selbin_women_world_unite.docx"  title="This link opens a Word document.">Word</a></p>
+							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/cordes_selbin_women_world_unite.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/cordes_selbin_women_world_unite.docx"  title="This link opens a Word document.">Word</a></p>
 
 							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
@@ -129,7 +131,7 @@
 
 						<p>This cluster of syllabi demonstrates the value of undisciplining Victorian studies courses on gender not only to include writing from Victorian women around the world but also to engage with contemporaneous questions of race, class, and sexuality. In doing so, both syllabi included here ask important questions about the relationship between feminism, gender, and imperialism in the nineteenth century. By incorporating Critical Race Theory, Black Studies, Postcolonial Studies and Decolonial thought, these syllabi present courses focused on women’s writing from different colonial traditions that experiment with genre and form as experimental spaces to align colonized women’s lived experience with the inherently gendered inflections of imperialism.</p>
 
-						<p>For example, Amy Kahrmann Huseby’s “Nineteenth-Century Women Write the Empire” emphasizes women’s writing that engages with complex ideas of empire through diverse genres that render identity transparent: life writing (e.g., memoir and biography), the lyric, and letters and essays. Each of these genres enables women writers to contend with empire and to experiment with literature as a way of exploring identity. Similarly, Jesse Cordes Selbin’s “Women of the World Unite? Nineteenth-Century Women Writers” explores the emergence of first-wave feminism as it developed throughout a “transimperial” world. Reading short fiction and poetry by women from around the globe alongside an incremental, semester-long reading of <em>Jane Eyre</em> (1847) enables students to contextualize the heroine’s evolving feminist rhetoric in an international and global context. Together, these syllabi build connections between texts and conversations between women across national divides to disrupt the canonical, conceptual, geographic, and formal boundaries of Victorian Studies.</p>	
+						<!-- <p>For example, Amy Kahrmann Huseby’s “Nineteenth-Century Women Write the Empire” emphasizes women’s writing that engages with complex ideas of empire through diverse genres that render identity transparent: life writing (e.g., memoir and biography), the lyric, and letters and essays. Each of these genres enables women writers to contend with empire and to experiment with literature as a way of exploring identity. Similarly, Jesse Cordes Selbin’s “Women of the World Unite? Nineteenth-Century Women Writers” explores the emergence of first-wave feminism as it developed throughout a “transimperial” world. Reading short fiction and poetry by women from around the globe alongside an incremental, semester-long reading of <em>Jane Eyre</em> (1847) enables students to contextualize the heroine’s evolving feminist rhetoric in an international and global context. Together, these syllabi build connections between texts and conversations between women across national divides to disrupt the canonical, conceptual, geographic, and formal boundaries of Victorian Studies.</p>	 -->
 					</section>
 
 					<section aria-labelledby="biography">
@@ -148,7 +150,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Jesse Cordes Selbin, dev. “Women of the World Unite? Nineteenth-Century Women Writers.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
+						<p>Jesse Cordes Selbin, dev. “Women of the World Unite?” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
 					</section>
 			</main>
 			
