update women world

--- a/html/syllabi/women_world_unite.html
+++ b/html/syllabi/women_world_unite.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Women of the World Unite? | Undisciplining the Victorian Classroom</title>
+    <title>Women of the World Unite? Nineteenth-Century Women Writers | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Explores the emergence of first-wave feminism as it developed throughout a “transimperial” world."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -51,7 +51,7 @@
 
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="syllabus">Women of the World Unite?</h2>
+						<h2 class="bottom" id="syllabus">Women of the World Unite? Nineteenth-Century Women Writers</h2>
           	<img style="object-position: 50% 0%;" src="/img/syllabi/uvc_0032-0033-1350px.jpg" srcset="/img/syllabi/uvc_0032-0033-1350px.jpg 1350w, /img/syllabi/uvc_0032-0033-1200px.jpg 1200w, /img/syllabi/uvc_0032-0033-1050px.jpg 1050w, /img/syllabi/uvc_0032-0033-900px.jpg 900w, /img/syllabi/uvc_0032-0033-750px.jpg 750w, /img/syllabi/uvc_0032-0033-600px.jpg 600w, /img/syllabi/uvc_0032-0033-450px.jpg 450w, /img/syllabi/uvc_0032-0033-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Left: X and Hiawatha standing in a close, but open pose, holding hands and looking at one another. Right: Edmonia Lewis, seated, with wrap over her shoulders, in three-quarters profile facing to her right." title="(Left) Lewis, Edmonia. “Hiawatha’s Marriage.” 1871, https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG. Wikimedia Commons. Public domain. (Right) Rocher, Henry. Edmonia Lewis. c 1870, https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg. Wikimedia Commons. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
@@ -60,8 +60,6 @@
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Full Syllabus Title:</strong> “Women of the World Unite? Nineteenth-Century Women Writers”</p>
-							
 							<p><strong>Developer:</strong> Jesse Cordes Selbin <a class="mail" href="mailto:jcordess@gettysburg.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Peer Reviewer:</strong> Ronjaunee Chatterjee</p>
@@ -150,7 +148,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Jesse Cordes Selbin, dev. “Women of the World Unite?” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
+						<p>Jesse Cordes Selbin, dev. “Women of the World Unite? Nineteenth-Century Women Writers” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
 					</section>
 			</main>
 			
