--- a/html/syllabi/women_world_unite.html
+++ b/html/syllabi/women_world_unite.html
@@ -148,7 +148,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Jesse Cordes Selbin, dev. “Women of the World Unite? Nineteenth-Century Women Writers” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
+						<p>Jesse Cordes Selbin, dev. “Women of the World Unite? Nineteenth-Century Women Writers.” Ronjaunee Chatterjee, peer rev.; Pearl Chaozon Bauer, syllabus cluster dev.  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/women_world_unite.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/world_women_unite.html</a>.</p>
 					</section>
 			</main>
 			
