--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -114,6 +114,8 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
+						<p>Columbia Center for Teaching and Learning. <a href="https://ctl.columbia.edu/resources-and-technology/resources/anti-racist-pedagogy/"><em>Anti-Racist Pedagogy in Action: First Steps</em></a>. 2020.</p>
+
 						<p>Gannon, Kevin M. <em>Radical Hope: A Teaching Manifesto</em>. West Virginia University Press, 2020.</p>
 
 						<p>Hammond, Zaretta. <em>Culturally Responsive Teaching &amp; the Brain: Promoting Authentic Engagement and Rigor Among Culturally and Linguistically Diverse Students</em>. Corwin, 2015.</p>
