update women write

--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -122,8 +122,9 @@
 						
 						<p>hooks, bell. <em>Teaching to Transgress: Education as the Practice of Freedom</em>. Routledge, 1994.</p>
 						
-						<p>Sen, Dinesh Chandra. “Introduction to Amar Jiban.” <em>Amar Jiban</em>, by Rashundari Devi, translated by Enakshi Chatterjee, Writers Workshop, 1999.</p>
+						<p>Sen, Dinesh Chandra. “About This Book.” <em>Amar Jiban</em>, by Rashundari Devi, translated by Enakshi Chatterjee, Writers Workshop, 1999, pp. 11-17.</p>
 					</section>
+
 
 					<section aria-labelledby="series">
 						<h3 id="series">Gender and Empire Series</h3>
