--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -190,7 +190,7 @@
               
               <p><em>Mercy Street</em>. 2016. PBS.</p>
               
-              <p>Thatcher, Toby. 2021. “<a href="https://youtu.be/nThGpVp6I00">Mary Seacole / Wonderful Adventures of Mrs. Seacole / Akamo / The Sick-Room / Nineteenth Circle</a>.” Film: Creative Performance. <em>YouTube</em>.</p>
+              <p>Thatcher, Toby. 2021. “<a href="https://youtu.be/nThGpVp6I00">Mary Seacole / Wonderful Adventures of Mrs. Seacole / Akamo / The Sick-Room / Nineteenth Circle</a>.” Short film. <em>YouTube</em>.</p>
             </section>
 
             <section aria-labelledby="materials-3">
