--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -200,7 +200,7 @@
             <section aria-labelledby="materials-5">
               <h4 id="materials-5">Further Reading</h4>
 
-							<p>Banerjee, Sukanya. “<a href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em>, vol. 46, no. 3–4, 2018, pp. 925–28.</p>
+							<p>Banerjee, Sukanya. 2018. “<a href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em> 46 (3–4): 925–28.</p>
 
 							<p>Gilroy, Paul. 1995. <em>The Black Atlantic: Modernity and Double Consciousness</em>. Cambridge: Harvard University Press.</p>
 							
