update index for peer review

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<section aria-labelledby="introduction">
 					<h2 id="introduction">Introduction</h2>
 
-					<p>Welcome to <em>Undisciplining the Victorian Classroom</em>, a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.</p>
+					<p>Welcome to <em>Undisciplining the Victorian Classroom</em>, a <a href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom">peer-reviewed</a> digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens.</p>
 
 					<p>We bring together a diverse set of individuals – permanent faculty, contingent staff, independent scholars, students – through an intentional collaboration based on radical care that responds to the renewed call for racial and social justice.</p>
 
