update footer for peer review

--- a/common/footer.html
+++ b/common/footer.html
@@ -1,5 +1,7 @@
 <footer id="footer">
   <p>
+    <span class="site-detail"><a href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom"><span>Peer review</span></a>, 2021</span>
+    
     <span class="site-detail">First edition, 2021</span>
 
     <span class="site-detail">Project launch, 2020</span>
