update syllabi for download link

--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -68,8 +68,6 @@
 
 							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx"  title="This link opens a Word document.">Word</a></p>
-
               <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
@@ -89,6 +87,8 @@
 
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
+
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx"  title="This link opens a Word document.">Word</a></p>
 
 						<p>In this course, we began with questions: “What is ‘Victorian’?” “What is ‘British’?” Students responded with original drawings, word clouds, and descriptions in which petticoats and top hats featured prominently. Their impressions of marriage plots and drawing-room dramas were consistent with the vision of Britishness one might associate with PBS's <em>Masterpiece</em> – or its source material, canonical nineteenth-century literature. Our conversation that first day illustrated Antoinette Burton’s argument that Britishness remains a “remarkably resilient cultural commodity” and that Britain continues to be depicted as “an essentially white island of history” (82–3).</p>
 
