--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -68,8 +68,6 @@
 
 							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/linley_unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/linley_unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p>
-
               <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
@@ -89,6 +87,8 @@
 
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
+
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/linley_unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/linley_unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p>
 
 						<p>“Unsettling Victorian Literature” aims to help students identify basic assumptions about what Victorian literature is and why we study it today. While our initial discussion focuses on “what” is Victorian, we quickly move to “where” and “when” is Victorian. Is Victorian somewhere in the past and far away in England, or is it so close to us that we can barely see it? Through this discussion, Victorian emerges not as a homogenous and fixed category but as many things simultaneously in relation, an open question and a tool we might use to locate and identify ourselves as historical and responsible agents, always relative, diverse, contested, and in flux. But is Victorian still necessary or relevant?</p>
 
