--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -68,8 +68,6 @@
 
 							<p><strong>Cluster Title:</strong> Gender and Empire</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/cordes_selbin_victorian_women_world.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/cordes_selbin_victorian_women_world.docx"  title="This link opens a Word document.">Word</a></p>
-
 							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
@@ -88,6 +86,8 @@
 
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
+
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/cordes_selbin_victorian_women_world.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/cordes_selbin_victorian_women_world.docx"  title="This link opens a Word document.">Word</a></p>
 
 						<p>This course introduces students to the interconnected, if often uneven, cultural encounters that arose across what Sukanya Banerjee has identified as the “transimperial” world. To focus our long, wide century of readings, we explore the emergence of first-wave feminism as it developed throughout this world. As Jill Richards has shown, attempts to convene an international feminist movement boomed in the late nineteenth and early twentieth centuries. Though women from around the globe aspired and worked to coalesce around common goals and collective labor, unification efforts remained tenuous, contingent, and fractured by both personal prejudices and structural inequities. This course surveys these intersections and tensions, opening with Age of Revolution human rights discourse and the variously marginalized authors who sought to extend the reach of its ideals of liberty and equality – work that has continued ever since. Throughout the semester, we analyze how English literature was shaped by global authors who advanced their voices in the public sphere, gave creative expression to visions of a gender-based commons, and pressed the question of what womanhood might mean, entail, or demand.</p>
 
