--- a/html/syllabi/women_write_empire.html
+++ b/html/syllabi/women_write_empire.html
@@ -68,8 +68,6 @@
 
 							<p><strong>Cluster Title:</strong> Gender and Empire</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/huseby_women_write_empire.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/huseby_women_write_empire.docx"  title="This link opens a Word document.">Word</a></p>
-
 							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
@@ -89,6 +87,8 @@
 
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
+
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/huseby_women_write_empire.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/huseby_women_write_empire.docx"  title="This link opens a Word document.">Word</a></p>
 
 						<p>“Nineteenth-Century Women Write the Empire” emphasizes writing from Victorian women around the world. Their writing engages with complex ideas of empire through diverse genres of writing that render identity transparent: life writing (e.g., memoir and biography), the lyric, and letters and essays. Each genre enabled women writers to contend with empire and to experiment in literature as a way of exploring identity. Our exploration moves outward in increasingly widening gyres, first from the Caribbean with the life writing of Mary Prince and Mary Seacole, then to the Transatlantic, and eventually following our authors to their experiences in the Crimean War, Australia, and the Indian Subcontinent. Some questions we ask include: How might focalizing our exploration of this ostensibly homogeneous thing called “England” through the writing of women of color work not only to dispel the silence of their experiences, but to foreground the granularity of empire? Throughout, we tease from their histories and creative work compounding acts of assimilation in order to discover the multitudinous perspectives women writers had on empire, and how their writing endeavored to challenge, question, and resist the British empire, as well as at times reinforcing its effects.</p>
 
