update syllabus template

--- a/0_dev/page-templates/0_syllabus-template.html
+++ b/0_dev/page-templates/0_syllabus-template.html
@@ -68,8 +68,6 @@
 
 							<p><strong>Cluster Title:</strong> </p><!-- Change -->
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
-
 							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
@@ -90,6 +88,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
 
+						<p><i class="fa fa-arrow-right fa-fw" aria-hidden="true"></i> Download the peer-reviewed syllabus: &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
 					
 					</section>
 
