--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="syllabus">Black (Im)mobilities</h2>
-          	<img src="/img/syllabi/uvc_000X-1800px.jpg" srcset="/img/syllabi/uvc_000X-1800px.jpg 1800w, /img/syllabi/uvc_000X-1650px.jpg 1650w, /img/syllabi/uvc_000X-1500px.jpg 1500w, /img/syllabi/uvc_000X-1350px.jpg 1350w, /img/syllabi/uvc_000X-1200px.jpg 1200w, /img/syllabi/uvc_000X-1050px.jpg 1050w, /img/syllabi/uvc_000X-900px.jpg 900w, /img/syllabi/uvc_000X-750px.jpg 750w, /img/syllabi/uvc_000X-600px.jpg 600w, /img/syllabi/uvc_000X-450px.jpg 450w, /img/syllabi/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/><!-- Change -->
+          	<img src="/img/syllabi/uvc_0035-1800px.jpg" srcset="/img/syllabi/uvc_0035-1800px.jpg 1800w, /img/syllabi/uvc_0035-1650px.jpg 1650w, /img/syllabi/uvc_0035-1500px.jpg 1500w, /img/syllabi/uvc_0035-1350px.jpg 1350w, /img/syllabi/uvc_0035-1200px.jpg 1200w, /img/syllabi/uvc_0035-1050px.jpg 1050w, /img/syllabi/uvc_0035-900px.jpg 900w, /img/syllabi/uvc_0035-750px.jpg 750w, /img/syllabi/uvc_0035-600px.jpg 600w, /img/syllabi/uvc_0035-450px.jpg 450w, /img/syllabi/uvc_0035-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="African American men and women, some with bundles on their heads, running across a wooded landscape." title="Kaufmann, Theodor. “On to Liberty.” 1867, https://www.metmuseum.org/art/collection/search/11287. The Met, 1982.443.3. Public domain. Gift of Erving and Joyce Wolf, in memory of Diane R. Wolf, 1982."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -134,6 +134,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+						<p>Kaufmann, Theodor. “<a href="https://www.metmuseum.org/art/collection/search/11287">On to Liberty</a>.” 1867. The Met, 1982.443.3. Public domain. Gift of Erving and Joyce Wolf, in memory of Diane R. Wolf, 1982.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
