--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="syllabus">Race, Trans-Atlantic Slavery and the British Empire</h2>
-          	<img src="/img/syllabi/uvc_000X-1800px.jpg" srcset="/img/syllabi/uvc_000X-1800px.jpg 1800w, /img/syllabi/uvc_000X-1650px.jpg 1650w, /img/syllabi/uvc_000X-1500px.jpg 1500w, /img/syllabi/uvc_000X-1350px.jpg 1350w, /img/syllabi/uvc_000X-1200px.jpg 1200w, /img/syllabi/uvc_000X-1050px.jpg 1050w, /img/syllabi/uvc_000X-900px.jpg 900w, /img/syllabi/uvc_000X-750px.jpg 750w, /img/syllabi/uvc_000X-600px.jpg 600w, /img/syllabi/uvc_000X-450px.jpg 450w, /img/syllabi/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/><!-- Change -->
+          	<img src="/img/syllabi/uvc_0036-1800px.jpg" srcset="/img/syllabi/uvc_0036-1800px.jpg 1800w, /img/syllabi/uvc_0036-1650px.jpg 1650w, /img/syllabi/uvc_0036-1500px.jpg 1500w, /img/syllabi/uvc_0036-1350px.jpg 1350w, /img/syllabi/uvc_0036-1200px.jpg 1200w, /img/syllabi/uvc_0036-1050px.jpg 1050w, /img/syllabi/uvc_0036-900px.jpg 900w, /img/syllabi/uvc_0036-750px.jpg 750w, /img/syllabi/uvc_0036-600px.jpg 600w, /img/syllabi/uvc_0036-450px.jpg 450w, /img/syllabi/uvc_0036-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Barker, Thomas Jones. “The Secret of England’s Greatness (Queen Victoria Presenting a Bible in the Audience Chamber at Windsor).” Wikimedia Commons, 1863, https://commons.wikimedia.org/wiki/File:The_Secret_of_England%27s_Greatness%27_(Queen_Victoria_presenting_a_Bible_in_the_Audience_Chamber_at_Windsor)_by_Thomas_Jones_Barker.jpg. National Portrait Gallery, NPG 4969. Public domain."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -142,6 +142,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
+						<p>Barker, Thomas Jones. “<a href="https://commons.wikimedia.org/wiki/File:The_Secret_of_England%27s_Greatness%27_(Queen_Victoria_presenting_a_Bible_in_the_Audience_Chamber_at_Windsor)_by_Thomas_Jones_Barker.jpg">The Secret of England’s Greatness (Queen Victoria Presenting a Bible in the Audience Chamber at Windsor)</a>.” Wikimedia Commons, 1863. National Portrait Gallery, NPG 4969. Public domain.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
