--- a/html/syllabi/victorian_women_world.html
+++ b/html/syllabi/victorian_women_world.html
@@ -139,7 +139,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>(Left) Lewis, Edmonia. “<a href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s Marriage</a>.” 1871. <em>Wikimedia Commons</em>.</p>
+						<p>(Left) Lewis, Edmonia. “<a href="https://commons.wikimedia.org/wiki/File:'Hiawatha's_Marriage',_marble_sculpture_by_Edmonia_Lewis,_1871.JPG">Hiawatha’s Marriage</a>.” 1871. <em>Wikimedia Commons</em>. Public domain.</p>
 						
 						<p>(Right) Rocher, Henry. <a href="https://commons.wikimedia.org/wiki/File:Motto_edmonia_lewis_original.jpg">Edmonia Lewis</a>. c.1870. <em>Wikimedia Commons</em>. Public domain.</p>
 					</section>
