--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Race, Trans-Atlantic Slavery and the British Empire | Undisciplining the Victorian Classroom</title>
+    <title>Race, Slavery, and the British Empire | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Explores Victorian literature through the lenses of race, trans-Atlantic slavery, and the British empire by drawing on Black and African American studies."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -51,8 +51,8 @@
 
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
-						<h2 class="bottom" id="syllabus">Race, Trans-Atlantic Slavery and the British Empire</h2>
-          	<img src="/img/syllabi/uvc_0036-1800px.jpg" srcset="/img/syllabi/uvc_0036-1800px.jpg 1800w, /img/syllabi/uvc_0036-1650px.jpg 1650w, /img/syllabi/uvc_0036-1500px.jpg 1500w, /img/syllabi/uvc_0036-1350px.jpg 1350w, /img/syllabi/uvc_0036-1200px.jpg 1200w, /img/syllabi/uvc_0036-1050px.jpg 1050w, /img/syllabi/uvc_0036-900px.jpg 900w, /img/syllabi/uvc_0036-750px.jpg 750w, /img/syllabi/uvc_0036-600px.jpg 600w, /img/syllabi/uvc_0036-450px.jpg 450w, /img/syllabi/uvc_0036-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Barker, Thomas Jones. “The Secret of England’s Greatness (Queen Victoria Presenting a Bible in the Audience Chamber at Windsor).” Wikimedia Commons, 1863, https://commons.wikimedia.org/wiki/File:The_Secret_of_England%27s_Greatness%27_(Queen_Victoria_presenting_a_Bible_in_the_Audience_Chamber_at_Windsor)_by_Thomas_Jones_Barker.jpg. National Portrait Gallery, NPG 4969. Public domain."/><!-- Change -->
+						<h2 class="bottom" id="syllabus">Race, Slavery, and the British Empire</h2>
+          	<img style="object-position: 50% 72%;" src="/img/syllabi/uvc_0036-1800px.jpg" srcset="/img/syllabi/uvc_0036-1800px.jpg 1800w, /img/syllabi/uvc_0036-1650px.jpg 1650w, /img/syllabi/uvc_0036-1500px.jpg 1500w, /img/syllabi/uvc_0036-1350px.jpg 1350w, /img/syllabi/uvc_0036-1200px.jpg 1200w, /img/syllabi/uvc_0036-1050px.jpg 1050w, /img/syllabi/uvc_0036-900px.jpg 900w, /img/syllabi/uvc_0036-750px.jpg 750w, /img/syllabi/uvc_0036-600px.jpg 600w, /img/syllabi/uvc_0036-450px.jpg 450w, /img/syllabi/uvc_0036-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title="Barker, Thomas Jones. “The Secret of England’s Greatness (Queen Victoria Presenting a Bible in the Audience Chamber at Windsor).” Wikimedia Commons, 1863, https://commons.wikimedia.org/wiki/File:The_Secret_of_England%27s_Greatness%27_(Queen_Victoria_presenting_a_Bible_in_the_Audience_Chamber_at_Windsor)_by_Thomas_Jones_Barker.jpg. National Portrait Gallery, NPG 4969. Public domain."/><!-- Change -->
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -147,7 +147,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Anne Feuerstein, dev. “Race, Trans-Atlantic Slavery and the British Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
+						<p>Anne Feuerstein, dev. “Race, Slavery, and the British Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
 					</section>
 			</main>
 			
