--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -66,10 +66,13 @@
 						<ul>
 							<li><strong>Zarena Aslami</strong> (Michigan State University)</li>
 							<li><strong>Carolyn Betensky</strong> (University of Rhode Island)</li>
+							<li><strong>Ava Bindas</strong> (University of California Davis)</li>
 							<li><strong>Kira Braham</strong> (Louisiana School for Math, Science, and the Arts)</li>
 							<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 							<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 							<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
+							<li><strong>Meg Dobbin</strong> (Eastern Michigan Universit)</li>
+							<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
 							<li><strong>Melissa Free</strong> (Arizona State University)</li>
 							<li><strong>Elaine Freedgood</strong> (New York University)</li>
 							<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
