--- a/sitemap.html
+++ b/sitemap.html
@@ -97,6 +97,14 @@
 	
 							<li role="none"><a href="/html/syllabi.html"><span id="syllabi">Syllabi</span></a>
 								<ol>
+									<li>Centering Black Studies
+										<ol>
+											<li><a href="/html/syllabi/black_(im)mobilities.html">Black (Im)mobilities</a></li>
+											<li><a href="/html/syllabi/victorian_human.html">The Victorian and the Human</a></li>
+											<li><a href="/html/syllabi/race_slavery_empire.html">Race, Trans-Atlantic Slavery, and the Empire</a></li>
+										</ol>
+									</li>
+
 									<li>Gender and Empire
 										<ol>
 											<li><a href="/html/syllabi/victorian_women_world.html">Victorian Women of the World</a></li>
