--- a/html/syllabi/black_(im)mobilities.html
+++ b/html/syllabi/black_(im)mobilities.html
@@ -106,7 +106,7 @@
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
-						<p>Hartman, Saidiya. <em>Wayward Lives, Beautiful Experiments Intimate Histories of Riotous Black Girls, Troublesome Women, and Queer Radicals</em>. W. W. Norton &amp; Compan, 2019.</p>
+						<p>Hartman, Saidiya V. <em>Wayward Lives, Beautiful Experiments Intimate Histories of Riotous Black Girls, Troublesome Women, and Queer Radicals</em>. W. W. Norton &amp; Company, 2019.</p>
 
 						<p>Lorde, Audre. “Poetry Is Not a Luxury.” <em>Sister Outsider: Essays and Speeches</em>, Crossing Press, 1984, pp. 36–39.</p>
 						
