--- a/html/syllabi/victorian_human.html
+++ b/html/syllabi/victorian_human.html
@@ -132,7 +132,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Hawkins, Benjamin Waterhouse. “<a href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” Evidence as to Man’s Place in Nature, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
+						<p>Hawkins, Benjamin Waterhouse. “<a href="https://archive.org/details/evidenceastomans63thom">Skeletons of the Gibbon. Orang. Chimpanzee. Gorilla. Man.</a>” <em>Evidence as to Man’s Place in Nature</em>, by Thomas Henry Huxley, Williams and Norgate, 1863, frontispiece. Public domain.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
