--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -71,7 +71,7 @@
 							<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 							<li><strong>Jesse Cordes Selbin</strong> (Gettysburg College)</li>
 							<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
-							<li><strong>Meg Dobbin</strong> (Eastern Michigan Universit)</li>
+							<li><strong>Meg Dobbins</strong> (Eastern Michigan Universit)</li>
 							<li><strong>Anne Feuerstein</strong> (University of Hawai'i-Mānoa)</li>
 							<li><strong>Melissa Free</strong> (Arizona State University)</li>
 							<li><strong>Elaine Freedgood</strong> (New York University)</li>
