--- a/html/syllabi/race_slavery_empire.html
+++ b/html/syllabi/race_slavery_empire.html
@@ -60,7 +60,7 @@
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Anne Feuerstein <a class="mail" href="mailto:annamf@hawaii.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
+							<p><strong>Developer:</strong> Anna Feuerstein <a class="mail" href="mailto:annamf@hawaii.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Peer Reviewer:</strong> Patricia A. Matthew</p>
 							
@@ -136,7 +136,7 @@
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
 
-						<p>Anne Feuerstein is an Associate Professor of English at the University of Hawai'i-Mānoa. She is the author of <em>The Political Lives of Victorian Animals: Liberal Creatures in Literature and Culture</em> (Cambridge 2019) and is currently writing a book on the racialization of human-animal relationships within the cultural histories of British slavery and empire. Her recent publications on slavery and empire have appeared in <em>Qui Parle</em> and <em>Nineteenth-Century Gender Studies</em>. In 2019, she was awarded the Presidential Citation for Excellence in Teaching award.</p>
+						<p>Anna Feuerstein is an Associate Professor of English at the University of Hawai'i-Mānoa. She is the author of <em>The Political Lives of Victorian Animals: Liberal Creatures in Literature and Culture</em> (Cambridge 2019) and is currently writing a book on the racialization of human-animal relationships within the cultural histories of British slavery and empire. Her recent publications on slavery and empire have appeared in <em>Qui Parle</em> and <em>Nineteenth-Century Gender Studies</em>. In 2019, she was awarded the Presidential Citation for Excellence in Teaching award.</p>
 					</section>
 
 					<section aria-labelledby="caption">
@@ -147,7 +147,7 @@
 					
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
-						<p>Anne Feuerstein, dev. “Race, Trans-Atlantic Slavery, and the Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
+						<p>Anna Feuerstein, dev. “Race, Trans-Atlantic Slavery, and the Empire.” Patricia A. Matthew, peer rev.; Ryan D. Fong, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/race_slavery_empire.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/race_slavery_empire.html</a>.</p>
 					</section>
 			</main>
 			
