--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				<section class="founding-dev" aria-labelledby="founders">
 					<h2 id="founders">Founding Developers</h2>
 					<ul>
-						<li><strong>Pearl Chaozon Bauer</strong> (Notre Dame de Namur University)</li>
+						<li><strong>Pearl Chaozon Bauer</strong> (The Nueva School)</li>
 						<li><strong>Ryan D. Fong</strong> (Kalamazoo College)</li>
 						<li><strong>Sophia Hsu</strong> (Lehman College, CUNY)</li>
 						<li><strong>Adrian S. Wisnicki</strong> (University of Nebraska-Lincoln)</li>
