--- a/html/zoomcasts/chaozon-bauer.html
+++ b/html/zoomcasts/chaozon-bauer.html
@@ -67,7 +67,7 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Pearl Chaozon Bauer (guest), Tricia Lootens (host)</p>
-							<p><strong>Length:</strong> </p><!-- Change -->
+							<p><strong>Length:</strong> 32:36</p>
 							<p><strong>Zoomcast Date:</strong> February 24, 2022</p>
 							<p><strong>Zoomcast Series:</strong> Positionality</p>
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2022-02-24-Chaozon-Bauer-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2022-02-24-Chaozon-Bauer-transcript.docx"  title="This link opens a Word document.">Word</a></p>
@@ -101,7 +101,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Pearl Chaozon Bauer.” Hosted by Tricia Lootens. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/chaozon-bauer.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/chaozon-bauer.html</a>.</p>
+						<p>“Zoomcast with Pearl Chaozon Bauer.” Hosted by Tricia Lootens. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/chaozon-bauer.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/chaozon-bauer.html</a>.</p>
 					</section>
 			</main>
 			
