--- a/html/zoomcasts/cobblah-kim.html
+++ b/html/zoomcasts/cobblah-kim.html
@@ -67,7 +67,7 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Anoff Nick Cobblah and Haejoo Kim (guests), Ryan D. Fong (host)</p>
-							<p><strong>Length:</strong> </p><!-- Change -->
+							<p><strong>Length:</strong> 31:59</p><!-- Change -->
 							<p><strong>Zoomcast Date: September 29, 2021</strong> </p>
 							<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-09-29-Cobblah-Kim-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-09-29-Cobblah-Kim-transcript.docx"  title="This link opens a Word document.">Word</a></p>
