--- a/html/zoomcasts/servitje.html
+++ b/html/zoomcasts/servitje.html
@@ -67,7 +67,7 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Lorenzo Servitje (guest), Ryan D. Fong (host)</p>
-							<p><strong>Length:</strong> </p><!-- Change -->
+							<p><strong>Length:</strong> 27:58</p>
 							<p><strong>Zoomcast Date:</strong> August 10, 2021</p>
 							<p><strong>Zoomcast Series:</strong> Positionality</p>
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-08-10-Servitje-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-08-10-Servitje-transcript.docx"  title="This link opens a Word document.">Word</a></p>
@@ -101,7 +101,7 @@
 
 					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
-						<p>“Zoomcast with Lorenzo Servitje.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/servitje.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/servitje.html</a>.</p>
+						<p>“Zoomcast with Lorenzo Servitje.” Hosted by Ryan D. Fong. <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/zoomcasts/servitje.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/servitje.html</a>.</p>
 					</section>
 			</main>
 			
