--- a/sitemap.html
+++ b/sitemap.html
@@ -62,6 +62,9 @@
 	
 							<li role="none"><a href="/html/zoomcasts.html"><span id="zoomcasts">Zoomcasts</span></a>
 								<ol>
+									<li><a href="/html/zoomcasts/chaozon-bauer.html">Pearl Chaozon Bauer</a></li>
+									<li><a href="/html/zoomcasts/kim-cobblah.html">Haejoo Kim and Anoff Nick Cobblah</a></li>
+									<li><a href="/html/zoomcasts/servitje.html">Lorenzo Servitje</a></li>
 									<li><a href="/html/zoomcasts/braham-ohri-simpson.html">Kira Braham, Indu Ohri, and Bre Simpson</a></li>
 									<li><a href="/html/zoomcasts/walters.html">Alisha Walters</a></li>
 									<li><a href="/html/zoomcasts/brice-hayward-reeder.html">Michelle Prain Brice, Jennifer Hayward, and Jessie Reeder</a></li>
